@@ -4,17 +4,17 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: platform_shell.n,v 1.3 2007/02/18 18:42:55 dkf Exp $
+'\" RCS: @(#) $Id: platform_shell.n,v 1.4 2007/07/20 16:49:38 andreas_kupries Exp $
 '\" 
 .so man.macros
-.TH "platform::shell" n 1.0.2 platform::shell "Tcl Bundled Packages"
+.TH "platform::shell" n 1.1.3 platform::shell "Tcl Bundled Packages"
 .BS
 '\" Note:  do not modify the .SH NAME line immediately below!
 .SH NAME
 platform::shell \- System identification support code and utilities
 .SH SYNOPSIS
 .nf
-\fBpackage require platform::shell ?1.0.1?\fR
+\fBpackage require platform::shell ?1.1.3?\fR
 .sp
 \fBplatform::shell::generic \fIshell\fR
 \fBplatform::shell::identify \fIshell\fR
